--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,8 @@
 h1 {
-    color: blue;
+    color: white;
+
+}
+
+.bg-gradient-custom {
+    background: linear-gradient(to right, skyblue, royalblue);
 }
