adds height to today, mockup search fields

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,3 +14,7 @@ h1 {
 .bg-gradient-custom {
     background: linear-gradient(to right, skyblue, royalblue);
 }
+
+.today-forecast {
+    height: 140px;
+}
